# 3d-cnn-classification

./: .gitignore  README.md  demo.ipynb  lineage_tree.ipynb  missing_frames_output.txt  missing_lineage.ipynb  pyproject.toml  pyvenv.cfg  requirements.txt
.ipynb_checkpoints/: demo-checkpoint.ipynb  exploration-checkpoint.ipynb
model/: README.md  __init__.py  model.py  predict.py
model/3ncnn/: 3ncnn.py  benchmark_all_models.sh  cnn_model.py  predict.py  sbatch.sh  slurm-4934236.out  slurm-4934561.out  slurm-4935122.out  slurm-4936728.out  slurm-4955951.out  slurm-4955955.out  slurm-4955999.out  slurm-4959199.out  slurm-4961163.out  slurm-4961236.out  slurm-4961333.out  slurm-4970450.out  slurm-4974841.out  slurm-4980109.out
model/4ncnn/: benchmark_all_models.sh  cnn_model.py  config.py  data_utils.py  model_utils.py  predict.py  sbatch.sh  slurm-4985634.out  slurm-4992754.out  slurm-5004936.out  slurm-5005576.out  slurm-5005953.out  slurm-5008901.out  slurm-5033220.out  slurm-5033249.out  slurm-5033327.out  slurm-5033574.out  slurm-5036011.out  visualization_utils.py
model/cnn/: cnn_only.py  sbatch.sh  slurm-4934129.out
model/ncnn3/: cnn_model.py  run_predication.ipynb  sbatch.sh  slurm-4963358.out  slurm-4966080.out  slurm-4973838.out  slurm-5043412.out  slurm-5044809.out  train.py
model/ncnn4/: __init__.py  benchmark_all_models.sh  check_label.sh  cnn_model.py  config.py  inference_example.ipynb  model_utils.py  predict.py  sbatch.sh  slurm-5023451.out  slurm-5042333.out  slurm-5042398.out  slurm_train.sh  (+13 more)
preperation/: README.md  __init__.py  parallel_extraction_script.py  process_dataset.py  sbatch_220321_stack11.sh  sbatch_david4epi.sh  sbatch_gata6nanog.sh  sbatch_stack6.sh
raw-data/: 220321_stack11  221016_FUCCI_Nanog_stack_3  230212_stack6
video_generation/: README.md  __init__.py  config.py  data_pipeline.py  examples.py  model_interface.py  renderer.py  run_stack3_4ncnn.py  sbatch_stack3_4ncnn.sh  slurm-5036671.out  slurm-5037696.out  slurm-5037745.out  video_generator.py
(+89 files in other folders)
