[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "3d-cnn-classification"
version = "0.1.0"
description = "3D CNN nucleus state classification and lineage analysis."
authors = [
    { name = "Dinesh Chhantyal", email = "myagdichhantyal@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "torch==2.2.2",
    "torchaudio==2.2.2",
    "torchvision==0.17.2",
    "scikit-learn==1.4.2",
    "scikit-image==0.22.0",
    "pytorch-lightning==2.0.0",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "scipy==1.13.0",
    "matplotlib==3.8.4",
    "seaborn==0.13.2",
    "tifffile==2023.8.30",
    "sympy==1.14.0",
    "Flask==2.3.2",
    "requests==2.31.0",
    "jupyterlab==3.6.6",
    "notebook==6.5.4",
    "tqdm==4.66.1",
    "PyYAML==6.0"
]

[tool.setuptools.packages.find]
where = ["model"]

[project.urls]
Homepage = "https://github.com/dineshchhantyal/3d-cnn-classification"
