[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "3d-cnn-classification"
version = "0.1.0"
description = "3D CNN nucleus state classification and lineage analysis."
authors = [
    { name = "Dinesh Chhantyal", email = "myagdichhantyal@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "numpy==2.2.6",
    "scipy==1.15.3",
    "torch==2.7.1",
    "torchvision==0.22.1",
    "scikit-learn==1.7.1",
    "matplotlib==3.10.3",
    "seaborn==0.13.2",
    "tifffile==2025.5.10",
    "opencv-python==4.12.0.88",
    "Pillow==11.3.0",
    "psutil==7.0.0",
    "imageio==2.37.0",
    "pandas==2.3.1",
    "sympy==1.14.0",
    "Flask==2.3.2",
    "requests==2.31.0",
    "tqdm==4.66.1"

]

[tool.setuptools.packages.find]
where = ["model"]

[project.urls]
Homepage = "https://github.com/dineshchhantyal/3d-cnn-classification"
